--- a/Assignment5&6/Web.config
+++ b/Assignment5&6/Web.config
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
+﻿<configuration>
 	<system.web>
 		<authentication mode="Forms">
 			<forms loginUrl="Login.aspx" timeout="30" />
@@ -7,5 +6,36 @@
 		<authorization>
 			<deny users="?" />
 		</authorization>
+		<compilation debug="false" targetFramework="4.0"/>
 	</system.web>
+
+	<system.webServer>
+		<handlers>
+			<add name=".svc" verb="*" path="*.svc" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+		</handlers>
+	</system.webServer>
+
+	<!-- Allow anonymous access to the EncryptionService.asmx -->
+	<location path="EncryptionService.asmx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+ <system.serviceModel>
+  <bindings>
+   <basicHttpBinding>
+    <binding name="EncryptionServiceSoap">
+     <security mode="Transport" />
+    </binding>
+    <binding name="EncryptionServiceSoap1" />
+   </basicHttpBinding>
+  </bindings>
+  <client>
+   <endpoint address="https://localhost:44345/EncryptionService.asmx"
+    binding="basicHttpBinding" bindingConfiguration="EncryptionServiceSoap"
+    contract="EncryptionServiceReference.EncryptionServiceSoap" name="EncryptionServiceSoap" />
+  </client>
+ </system.serviceModel>
 </configuration>
