Added components to TryIt

--- a/Assignment5&6/Web.config
+++ b/Assignment5&6/Web.config
@@ -30,12 +30,16 @@
      <security mode="Transport" />
     </binding>
     <binding name="EncryptionServiceSoap1" />
+    <binding name="BasicHttpBinding_IService1" />
    </basicHttpBinding>
   </bindings>
   <client>
    <endpoint address="https://localhost:44345/EncryptionService.asmx"
     binding="basicHttpBinding" bindingConfiguration="EncryptionServiceSoap"
     contract="EncryptionServiceReference.EncryptionServiceSoap" name="EncryptionServiceSoap" />
+   <endpoint address="http://webstrar71.fulton.asu.edu/Page0/Service1.svc"
+    binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
+    contract="WindServiceReference.IService1" name="BasicHttpBinding_IService1" />
   </client>
  </system.serviceModel>
 </configuration>
