--- a/Assignment5&6/Assignment5&6.csproj
+++ b/Assignment5&6/Assignment5&6.csproj
@@ -85,8 +85,12 @@
     <Content Include="Login.aspx" />
     <Content Include="LoginControl.ascx" />
     <Content Include="Logout.aspx" />
+    <Content Include="Member.aspx" />
+    <Content Include="Member.xml" />
     <Content Include="README.txt" />
     <Content Include="ServiceDirectory.xml" />
+    <Content Include="Staff.aspx" />
+    <Content Include="Staff.xml" />
     <Content Include="TryIt.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -132,7 +136,21 @@
     <Compile Include="Logout.aspx.designer.cs">
       <DependentUpon>Logout.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Member.aspx.cs">
+      <DependentUpon>Member.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Member.aspx.designer.cs">
+      <DependentUpon>Member.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Staff.aspx.cs">
+      <DependentUpon>Staff.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Staff.aspx.designer.cs">
+      <DependentUpon>Staff.aspx</DependentUpon>
+    </Compile>
     <Compile Include="TryIt.aspx.cs">
       <DependentUpon>TryIt.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
